# HuggingSpace2

./: .env.example  .gitignore  index.html  migrate.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.bolt/supabase_discarded_migrations/: 0019_billowing_feather.sql
backend/: .env.example  models.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/api/: middleware.py  permissions.py  urls.py  views.py
backend/apps/api/tests/: test_api.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_auth.py
backend/core/: settings.py  test_db_connection.py  urls.py
backup_db/: 22docker-compose.yml.txt  dockerfile  init-extensions.sql  schema.sql
src/: App.tsx
src/components/: DatabaseChoiceModal.tsx  ErrorBoundary.tsx  HomePage.tsx  Layout.tsx  LoadingSpinner.tsx  SearchBar.tsx  SpaceCard.tsx  SpacesList.tsx  UserAvatar.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/hooks/: useContent.ts  useCreateDataset.ts  useCreateModel.ts  useCreateSpace.ts  useDatasetFilters.ts  useDatasets.ts  useDebounce.ts  useGitHubAuth.ts  useImageUpload.ts  useModelCommits.ts  useModelFiles.ts  useModelFilters.ts  useModels.ts  useProfile.ts  useProfileContent.ts  useProfileData.ts  useRepositoryFiles.ts  useRepositoryState.ts  useSearch.ts  useSpaceActions.ts  useSpaceFilters.ts  useSpaces.ts  useTheme.ts
src/lib/: auth.ts  constants.ts  db.ts  github.ts  postgres.ts  storage.ts  supabase.ts
src/pages/: AuthPage.tsx  ContentPage.tsx  (+10 more)
(+184 files in other folders)
